[FIX] website_event_track: reduce cell height and fix scroll bar
This commit optimizes cell height by moving the bell icon next to the
tags.

This commit also allows to have a fixed horizontal scroll bar when an
agenda has hidden content. This removes the need to go to the bottom of
the agenda to scroll horizontally.

task-4086340

--- a/addons/website_event_track/static/src/scss/event_track_templates.scss
+++ b/addons/website_event_track/static/src/scss/event_track_templates.scss
@@ -26,7 +26,7 @@
 }
 
 .o_we_online_agenda {
-    $-events-spacing: $grid-gutter-width * 0.5;
+    $-events-spacing: map-get($spacers, 1);
 
     border-top: $border-width solid transparent;
     overflow-x: auto;
